# P3DS

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build_cmake.yml
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  MainPage.md
lib/: CMakeLists.txt  Configuration.h.in
lib/include/Maths/: Vector.h
lib/src/Maths/: Details.cpp  Details.h  Vector.cpp
tests/: CMakeLists.txt  testlib.cpp
